--- a/Style.css
+++ b/Style.css
@@ -56,6 +56,10 @@ body{
     width: 50px;
     height: 50px;
     border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .Number{
@@ -116,6 +120,11 @@ body{
     width: 100%;
     border-radius: 50px;
     color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 30px;
 }
 
 /* Iphone SE */
